# codepeek

./: .gitignore  pyproject.toml  requirements.txt  setup.py
codepeek/: cli.py  constants.py  extractor.py
codepeek.egg-info/: PKG-INFO
codepeek/analyzer/: ai_analyzer.py  local_analyzer.py  pdf_reporter.py  suggestion_model.py
